Filtered by Date & Created Columns

--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -23,6 +23,12 @@
     <%= f.label :gf %><br>
     <%= f.check_box :gf %>
   </div>
+  
+  <div class="field">
+    <%= f.label :newdate %><br>
+    <%= f.date_field :newdate %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
