--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -9,6 +9,7 @@
 	<dt><%= dish.item%></dt>
 	<dd><%= dish.spicy%></dd>
 	<dd><%= dish.gf%></dd>
+	<dd><%= dish.newdate%></dd>
       </dl>
       
       </td>
