--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -10,6 +10,10 @@
 	color: #0D0097;
     }
 
+    h4 {
+	font: 150% "Georgia", serif;
+    }
+
     /* Entry */
     .entry {
 	overflow: auto;
@@ -18,7 +22,7 @@
 	h3 {
 	    font-size: 120%;
 	    font-family: "Georgia", serif;
-	    margin-left: 5px;
+	    margin-left: 1%;
 	    color: #0D0097;
 	    
 	}
@@ -30,15 +34,59 @@
 
     }
 
+    .columns {
+	overflow: auto;
+	display: inline-table;
+	width: 33%;
+	
+
+	h2 {
+	    font-size: 150%;
+	    font-family: "Georgia", serif;
+	    margin-left: 1%;
+	    color: #00000;
+	    text-align: center;
+	    
+	}
+	h3 {
+	    font-size: 120%;
+	    font-family: "Georgia", serif;
+	    margin-left: 1%;
+	    color: #0D0097;
+	    
+	}
+	
+	img {
+	    width: 20px;
+	    vertical-align: bottom;
+	}
+	h4 {
+	    font-size: 90%;
+	    font-family: "Georgia", serif;
+	    margin-left: 3%;
+	    color: #00000;
+	    text-align: center;
+	}
+	    
+    }
+
     /* Legend */
     .legend {
 	font-family: "Georgia", serif;
 	font-size: 90%;
+	padding-bottom: 10em;
 	
 	img{
 	    width: 20px;
 	    margin-left: 3px;
 	    vertical-align: middle;
+	}
+	h4 {
+	    font-size: 90%;
+	    font-family: "Georgia", serif;
+	    margin-left: 3%;
+	    color: #00000;
+	    text-align: center;
 	}
 	
     }
